--- a/vue-demo/package.json
+++ b/vue-demo/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "lottie-api": "^1.0.3",
+    "lottie-web": "^5.7.11",
     "stylus-loader": "^3.0.2",
+    "three": "^0.130.0",
     "vue": "^2.5.21",
     "vue-router": "^3.0.2",
     "vue-style-loader": "^4.1.2"
