--- a/vue-demo/package.json
+++ b/vue-demo/package.json
@@ -15,6 +15,7 @@
     "lottie-web": "^5.7.11",
     "stylus-loader": "^3.0.2",
     "three": "^0.130.0",
+    "vcompass": "^1.0.1",
     "vue": "^2.5.21",
     "vue-router": "^3.0.2",
     "vue-style-loader": "^4.1.2"
