--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "echarts": "^5.2.0",
     "eslint-plugin-html": "^6.0.0",
     "jquery": "^3.4.1",
     "less": "^3.9.0",
