--- a/vue-demo/package.json
+++ b/vue-demo/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "echarts": "^5.2.1",
+    "html2canvas": "^1.3.2",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "lottie-api": "^1.0.3",
