--- a/vue-demo/package.json
+++ b/vue-demo/package.json
@@ -9,12 +9,15 @@
     "build:dev": "set NODE.ENV=development&&vue-cli-service build"
   },
   "dependencies": {
+    "dom-to-image": "^2.6.0",
     "echarts": "^5.2.1",
+    "html-to-image": "^1.9.0",
     "html2canvas": "^1.3.2",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "lottie-api": "^1.0.3",
     "lottie-web": "^5.7.11",
+    "puppeteer": "^13.3.1",
     "stylus-loader": "^3.0.2",
     "three": "^0.130.0",
     "vcompass": "^1.0.1",
